--- a/index.html
+++ b/index.html
@@ -70,5 +70,22 @@
             </div>
         </div>
     </section>
+    <section class="brain-section">
+        <div class="brain-section-image">
+            <img src="./assets/knowledge.png" alt="">
+        </div>
+        <div class="brain-section-content">
+            <h3>The Solution</h3>
+            <h2>Your second brain,structured by design.</h2>
+            <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+            <ul class="menu">
+                <li><img src="./assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</li>
+                <li><img src="./assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</li>
+                <li><img src="./assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
+                <li><img src="./assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
+            </ul>
+        </div>
+    </section>
+    
 </body>
 </html>
