updated early access section

--- a/index.html
+++ b/index.html
@@ -86,6 +86,23 @@
             </ul>
         </div>
     </section>
-    
+    <section class="early-access-section">
+        <div>
+            <h2>Ready to think more clearly?</h2>
+            <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
+        </div>
+        <div>
+            <button class="early-btn">Get Early Access<i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+        <div>
+            <p></p>
+            <ul>
+                <li class="list-1">Free during early access</li>
+                <li>No credit card needed</li>
+            </ul>
+        </div>
+
+    </section>
+
 </body>
 </html>
