--- a/index.html
+++ b/index.html
@@ -88,19 +88,21 @@
     </section>
     <section class="early-access-section">
         <div>
+            <div class="content-section">
             <h2>Ready to think more clearly?</h2>
             <p>Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
-        </div>
-        <div>
+            </div>
+            <div>
             <button class="early-btn">Get Early Access<i class="fa-solid fa-arrow-right"></i></button>
-        </div>
-        <div>
+            </div>
+            <div>
             <p></p>
             <ul>
                 <li class="list-1">Free during early access</li>
                 <li>No credit card needed</li>
             </ul>
-        </div>
+            </div>
+        </div>    
 
     </section>
 
