--- a/index.html
+++ b/index.html
@@ -105,7 +105,26 @@
         </div>    
 
     </section>
-    <footer></footer>
+    <footer>
+        <section>
+            <div class="footer-section">
+                <div>
+                    <img src="./assets/logo-footer.png" alt="">
+                </div>
+                <div class="social">
+                    <p>Social Links</p>
+                    <a href=""><img src="./assets/twiter.jpg" alt=""></a>
+                    <a href=""><img src="./assets/link.png" alt=""></a>
+                    <a href=""><img src="./assets/fb.png" alt=""></a>
+                    
+                </div>
+            </div>
+            <hr>
+            <div class="copy-right">
+                <p>&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
+            </div>
+        </section>
+    </footer>
 
 </body>
 </html>
